Feature/#56 java memory management (#4)
* Documenting the issue from the OP in the ticekt.

* Wrapping access to getMemoryXBean into try/catch.