@@ -3,7 +3,7 @@ raygun4cfml
 
 Raygun Crash Reporting client for CFML.
 
-Current Version: 1.6.0 (November 23 2023)
+Current Version: 1.7.0 (December 20 2023)
 
 Dependencies: 
 
@@ -80,7 +80,7 @@ Download a zip file containing the current content of the repo or a release/tag 
 
 ## Version History
 
-See changelog.md for further information.
+See CHANGELOG.md for further information.
 
 ## General Notes
 
@@ -89,6 +89,8 @@ See changelog.md for further information.
 (2) If you are using the ACF Administrator setting: "Prefix serialized JSON with..." with anything else but the default prefix of `//`, the library will not work.
 
 (3) Version 1.1.0 and newer will not work on Adobe ColdFusion 8 and most likely not on Railo 3 (the latter not tested).
+
+(4) On newer Java versions (>11), there is no default access to Java Memory Management unless you add the following argument to your JVM configuration: `--add-opens java.management/sun.management=ALL-UNNAMED`
 
 ## How to contribute
 
